/***********************************************************************
 X3 ChangeLog

2006-12-17  Neil Spierling  <sirvulcan@gmail.com>

	* src/chanserv.c: Added function check_bans to check bans in a
	specific channel when needed (see below).

	* src/chanserv.h: check_bans deceleration.

	* src/proto-p10.c: First of all we dont need a handle_info when
	checking for IsHiddenHost, the IRCd takes care of this. Made it
	so we copy the fakehost into user->fakehost so X3 can check
	IsFakeHost properly. Lastly after we set a fakehost in irc_mark
	we need to recheck the users bans just in case a person has
	lamer'ed the marked hostname.

2006-12-12  Alex Schumann   <rubin@afternet.org>

	* configure.in: making google core lib optional

	* configure: regenerated

	* src/proto-p10.c: added support for sending nefarious marks

	* src/proto.h: prototype for irc_mark

	* src/opserv.help: documented new mark support. Also documented the
	svsjoin and svspart commands as they were missing.

	* src/hash.h: added MARKLEN define

	* src/opserv.c: added mark command as well as mark support in trace
	and addalert.
	
2006-12-12  Neil Spierling  <sirvulcan@gmail.com>

	* configure: Regenerated.

	* configure.in: Add support for google core dumper. Plus updated
	tre to 0.7.5.

	* Makefile.in: Regenerated.

	* rx/Makefile.in: Regenerated.

	* src/config.h.in: Regenerated.

	* src/Makefile.in: Regenerated.

	* tools/core_install.sh: Just like tre_install.sh. This installs
	the core dumper.

	* tools/coredumper.tar.gz: Google core dumper 0.2.
	http://sourceforge.net/projects/goog-coredumper/

	* tools/tre_install.sh: Updated version to 0.7.5

	* tools/tre.tar.gz: Updated tre to 0.7.5.

2006-12-10  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: fix debug message left at wrong level ("checking
	reroute()")

2006-12-09  Alex Schumann   <rubin@afternet.org>

	* src/opserv.c: bugfixes to autorouting timer code
	improved stats routing to clean up & take an argument
