@@ -1131,15 +1131,16 @@ irc_mark(struct userNode *user, char *mark)
         unsigned int count = 0;
         unsigned int n = 0;
 
-        putsock("%s " CMD_MODE " %s +x", self->numeric, user->nick);
         putsock("%s " CMD_FAKEHOST " %s %s.%s", self->numeric, user->numeric, mark, host);
+        putsock("%s " CMD_MODE " %s +x", self->numeric, user->nick);
         
         snprintf(fakehost, sizeof(fakehost), "%s.%s", mark, host);
         safestrncpy(user->fakehost, fakehost, sizeof(user->fakehost));
 
         for (n=count=0; n<user->channels.used; n++) {
             mn = user->channels.list[n];
-            check_bans(user, mn->channel->name);
+            if (strlen(mn->channel->name) >= 1) /* Sanity */
+                check_bans(user, mn->channel->name);
         }
     }
 }
